# provenant

./: .gitattributes  .gitignore  .license-headers.toml  .prettierignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  about.hbs  about.toml  build.rs  deny.toml  lefthook.yml  package-lock.json  package.json  release.sh  renovate.json
.github/: pull_request_template.md
.github/homebrew/: provenant.rb.tmpl
.github/workflows/: check.yml  one-time-checks.yml  platform-verify.yml  release.yml  scancode-triage.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI_GUIDE.md  DOCUMENTATION_INDEX.md  EVALUATING_WITH_SCANCODE_WORKFLOWS.md  HOW_TO_ADD_A_PARSER.md  LIBRARY_GUIDE.md  LICENSE_DETECTION_ARCHITECTURE.md  MIGRATING_FROM_SCANCODE.md  OUTPUT_FIELD_REFERENCE.md  RELEASING.md  SCANCODE_COMPARISON.md  SERVE_API_GUIDE.md  SUPPORTED_FORMATS.md  TESTING_STRATEGY.md  demo.tape
docs/adr/: 0002-extraction-vs-detection.md  0004-security-first-parsing.md  0005-auto-generated-docs.md  0006-datasourceid-driven-package-assembly.md  0008-output-schema-separation.md  0009-parser-submodule-structure.md  0010-package-license-from-cohosted-files.md  0011-license-compliance-gating-and-sarif.md  0012-sbom-resolved-dependency-components.md  README.md
docs/demo/: record.sh  scancode
docs/implementation-plans/: README.md
docs/improvements/: README.md  alpine-parser.md  bazel-buck-build-targets.md  cli-workflows.md  copyright-detection.md  dart-parser.md  email-url-detection.md  gradle-parser.md  helm-parser.md  huggingface-parser.md  maven-parser.md  npm-parser.md  npm-yarn-parser.md  nuget-parser.md  osgi-manifest-parser.md  uv-lock-parser.md  vcpkg-parser.md
docs/openapi/: provenant-serve.openapi.json
examples/sbom/: README.md
resources/license_detection/: declared_license_aliases.toml  index_build_policy.toml
scripts/: README.md  check_crate_size.sh  check_dependency_policy.sh  check_license_config_sync.sh  check_notice_attribution_sync.sh  check_release_tag_sync.sh  check_release_version_sync.sh  generate_third_party_notices.sh  notice_retained_segments.txt  requirements-output-format-validators.txt  smoke_scan_check.sh  sync_agent_skills.sh  validate_output_format_fixtures.py
src/: compare.rs  compare_driver_shared.rs  compare_normalization.rs  golden_maintenance.rs  lib.rs  progress.rs  serve_api.rs  time.rs  version.rs  workflow.rs
src/app/: mod.rs  request.rs  scan_pipeline.rs  scan_plan.rs  scan_runtime.rs
src/assembly/: assemblers.rs  assembly_test.rs  bazel_merge.rs  cargo_resource_assign.rs  cargo_workspace_merge.rs  clojure_deps_assign.rs  cocoapods_merge.rs  composer_resource_assign.rs  conda_rootfs_merge.rs  dart_workspace_merge.rs  debian_source_merge.rs  file_ref_resolve.rs  file_ref_resolve_test.rs  go_workspace.rs  gradle_multiproject.rs  hackage_merge.rs  huggingface_merge.rs  ivy_dependencies_properties_assign.rs  maven_reactor.rs  mix_umbrella_merge.rs  mod.rs  nested_merge.rs  nested_merge_test.rs  npm_resource_assign.rs  npm_workspace_merge.rs  nuget_cpm_resolve.rs  path_identity.rs  pixi_topology.rs  project_dependency_assign.rs  python_requirements_assign.rs  resource_assign.rs  ruby_resource_assign.rs  sibling_merge.rs  swift_merge.rs  topology.rs  uv_workspace.rs
src/cache/: config.rs  incremental.rs  io.rs  locking.rs  mod.rs
src/cli/: mod.rs  tests.rs
src/copyright/: candidates.rs  credits.rs  detector_input_normalization.rs  hints.rs  lexer.rs  lexer_test.rs  mod.rs  patterns.rs  patterns_test.rs  prepare.rs  types.rs
src/finder/: emails.rs  host.rs  junk_data.rs  mod.rs  urls.rs
src/license_detection/: aho_match.rs  automaton.rs  build_policy.rs  dataset.rs  golden_utils.rs  hash_match.rs  hash_match_test.rs  license_cache.rs  mod.rs  position_set.rs  spdx_key_canonicalization.rs  test_utils.rs  tests.rs  (+3 more)
testdata/: PROVENANCE.md  smoke-expected.json
tests/: assembly_golden.rs  from_json_hollow_sbom_guard.rs  license_detection_golden.rs  native_sbom_inventory_guard.rs  output_format_golden.rs  parsers_golden.rs  post_processing_golden.rs  progress_cli_integration.rs  sbom_dependency_promotion.rs  scanner_integration.rs  version_format_unit.rs
xtask/: Cargo.toml  README.md  benchmark-artifacts.json
xtask/src/: common.rs  manifests.rs
(+896 files in other folders)
